deployments/k8s/03-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: csapi-web
  labels:
    app: csapi-web
  namespace: csapi
spec:
  selector:
    app: csapi-web
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 3333
    name: web-http
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: csapi-web-lb
  namespace: csapi
spec:
  selector:
    app: csapi-web
  ports:
  - port: 80
    protocol: "TCP"
    targetPort: 3333
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: csapi-db
  namespace: csapi
spec:
  selector:
    app: csapi
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: grafana-np
  namespace: csapi
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-grafana
  sessionAffinity: None
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: prometheus-np
  namespace: csapi
spec:
  selector:
    app: prometheus
  ports:
  - port: 9090
    protocol: TCP
    targetPort: http-prometeus
  type: NodePort
