deployments/k8s/03.1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csapi-in
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.awesome
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-np
            port:
              number: 3000
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-np
            port:
              number: 9090
